2023-08-15  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Corrected the output of --today when two backups are too near to each other

2023-08-07  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Corrected the timestamp of the latest backup with multiple destinations

2023-07-21  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Corrected the size of the last backups (same values as Backup Loupe)

2023-07-17  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: show the size of todays backups

2023-07-10  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Fixed the time difference by the last local backup

2023-07-07  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: show information for all the disks (--all option)
        * tmstatus.sh: today's backups on one line per destination

2023-06-27  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (parse_destination_info): Parsing of destinationinfo with more than one destination

2023-06-19  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Support multiple destinations

2023-06-17  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Fixed a small display bug when fining changes is at 0%

2023-05-31  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (COMPUTER_TMP): Better computer name

2023-05-30  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Show the time window for the log analysis

2023-05-26  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Parse only the last 60 minutes in the logs (faster)

2023-05-17  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Prints a short message during wait times

2023-05-04  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): fix if no speed is available
        * tmstatus.sh: --verbose option

2023-05-03  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (usage): -s option
        * tmstatus.sh (usage): -p option