@@ -1,3 +1,7 @@
+2023-08-16  Matteo Corti  <matteo@corti.li>
+
+        * tmstatus.sh: Align today's backups
+
 2023-08-15  Matteo Corti  <matteo@corti.li>
 
         * tmstatus.sh: Corrected the output of --today when two backups are too near to each other
